<resources>
  <string name="app_name">My Application to Testing</string>
  <string name="welcoming">Welcome in my testing application!</string>
  <string name="przycisk">Press bottom if You want to go to next screen!</string>
  <string name="spin_prompt">Coś</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_pager">PagerActivity</string>
  <string name="animation_activity">Animation Example</string>
  <string name="equation_activity">Equation Example</string>
  <string name="fragments_activity">Fragments Example</string>
  <string name="fragment_swipe_activity">Fragment Swipe Example</string>
  <string name="fragment_toolbsr_activity">Fragment Toolbar Example</string>
  <string name="buttons_activity">Buttons Example</string>
  <string name="collection_activity">Collection Example</string>
  <string name="dynamic_fragment_activity">Dynamic Fragment Example</string>
  <string name="pager_activity">Pager(TabLayout) Example</string>
  <string name="listview_activity">ListView Example</string>
  <string name="action_add">Add</string>
  <string name="action_close">Close</string>
  <string name="action_help">Help</string>
  <string name="show_action_bar">Show action bar</string>
  <string name="hide_action_bar">Hide action bar</string>
  <string name="nav_menu_example_activity">Menu Example</string>
  <string name="nav_default_activity">Themes and styles Example</string>
  <string name="nav_material_design_activity">Material Design Example</string>
  <string name="nav_my_card_view_activity">My CardView Example</string>
  <string name="nav_simple_preferences_activity">Sample Preferences Example</string>
  <string name="nav_simple_user_preferences_activity">Sample User Preferences Example</string>
  <string name="nav_simple_header_preferences_activity">Sample Headers Preferences Example</string>
  <string name="nav_simple_files_activity">Sample files Example</string>
  <string name="nav_advanced_files_activity">Advanced files Example</string>
  <string name="nav_content_providers_activity">Content Providers Example</string>
  <string name="nav_content_providers_image_activity">Image: Content Providers Example</string>
  <string name="nav_simple_fragments_activity">Simple Fragment Example</string>


  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="refresh">Refresh</string>
  <string name="settings">Settings</string>

  <!-- Strings to application with styles and themes -->
  <string name="app_styles_and_themes_default_name">Activity without styles and themes</string>
  <string name="app_styles_and_themes_bright_name">Activity with bright styles and themes</string>
  <string name="app_styles_and_themes_dark_name">Activity with dark styles and themes</string>
  <string name="text_view_heading">This is main window with information</string>
  <string name="edit_text_heading">This is main window with input text by user</string>
  <string name="primary_text_view">Primary textView example</string>
  <string name="second_text_view">Second textView example</string>
  <string name="editText">EditText example</string>
  <string name="action_bright">Bright theme</string>
  <string name="action_dark">Dark theme</string>
  <string name="map">Map</string>
  <string name="email">E-mail</string>
  <string name="info">Information</string>
  <string name="fab">Add</string>
  <string name="hint">Hint</string>

  <item name="visible" type="id"/>
  <item name="masked" type="id"/>

  <string name="app_name_material">Material Design and Database SQLite</string>
  <string name="add_button">Add</string>
  <string name="update_button">Change</string>
  <string name="delete_button">Delete</string>
  <string name="fab2">Add friend</string>
  <string name="title_activity_transition_edit">Edycja kontaktu</string>
  <string name="title_activity_transition_add">Dodawanie kontaktu</string>

  <string name="title_activity_my_cardview">My cardview</string>
  <string name="title_activity_my_cardview_add">My cardview add</string>
  <string name="title_activity_my_cardview_edit">My cardview edit</string>

  <string-array name="names_array">
    <item>Michał</item>
    <item>Janka</item>
    <item>Krzysiek</item>
    <item>Anna</item>
    <item>Janek</item>
    <item>Marcelina</item>
    <item>Dawid</item>
    <item>Michasia</item>
    <item>Jurek</item>
    <item>Katarzyna</item>
    <item>Joachim</item>
    <item>Liza</item>
    <item>Robert</item>
    <item>Angela</item>
    <item>Bartek</item>
    <item>Hieronim</item>
    <item>Wilhelm</item>
    <item>Stefa</item>
    <item>Maciek</item>
    <item>Nikola</item>
    <item>Jasiek</item>
    <item>Joanna</item>
    <item>Daniel</item>
    <item>Ela</item>
    <item>Krystian</item>
    <item>Rebeka</item>
    <item>Eryk</item>
    <item>Krystyna</item>
    <item>Jakub</item>
    <item>Maria</item>
    <item>Ryszard</item>
    <item>Krystyna</item>
    <item>Stefania</item>
    <item>Amanda</item>
    <item>Marek</item>
    <item>Julia</item>
    <item>Tomasz</item>
    <item>Laura</item>
    <item>Tymon</item>
    <item>Sylwia</item>
    <item>Antek</item>
    <item>Kornelia</item>
    <item>Karol</item>
    <item>Tomek</item>
    <item>Ireneusz</item>
    <item>Witold</item>
    <item>Roman</item>
    <item>Bartek</item>
    <item>Darek</item>
    <item>Danuta</item>
  </string-array>

  <string-array name="animals_array">
    <item>Cat</item>
    <item>Dog</item>
    <item>Ant</item>
    <item>Horse</item>
    <item>Parrot</item>
    <item>Monkey</item>
    <item>Elephant</item>
    <item>Tiger</item>
    <item>Lion</item>
    <item>Wolf</item>
  </string-array>

  <string name="app_name_preferences">Preferences</string>

  <string name="title_activity_more_simple_preferences">More preferences</string>
  <string name="title_activity_super_simple_preferences">Super preferences</string>
  <string name="activity_name">-Activity name-</string>
  <string name="change_activities">Change activity</string>
  <string name="enter_pref_name">Enter preference name</string>
  <string name="enter_pref_value">>Enter preference value</string>
  <string name="add_edit_shared_pref">Add/Edit shared preferences</string>
  <string name="clear_shared_pref_by_name">Delete shared preference by name</string>
  <string name="add_edit_activity_pref">Add/delete activity preference</string>
  <string name="clear_act_pref_by_name">Delete preference by name</string>
  <string name="SHARED_PREFS">*SHARED PREFERENCES*</string>
  <string name="clear_all_shared_prefs">Delete all shared preferences</string>
  <string name="show_prefs_here">-Show preferences here-</string>
  <string name="ACTIVITY_PREFS">*ACTIVITY PREFERENCES*</string>
  <string name="clear_all_activity_prefs">Delete all activity preferences</string>

  <string name="app_name_user_preferences">User preferences</string>
  <string name="app_name_header_preferences">Preferences with header</string>

  <string-array name="char_gender_types">
    <item>Man</item>
    <item>Women</item>
    <item>Unknown</item>
  </string-array>
  <string-array name="char_genders">
    <item>Male</item>
    <item>Female</item>
    <item>Unknown</item>
  </string-array>
  <string-array name="char_race_types">
    <item>Elf</item>
    <item>Krasnolud</item>
    <item>Driada</item>
    <item>Troll</item>
  </string-array>
  <string-array name="char_races">
    <item>elf</item>
    <item>dwarf</item>
    <item>dryad</item>
    <item>troll</item>
  </string-array>

  <string name="app_name_files">Simple file operations</string>

  <string name="notice">This application has no user interface! If You want to see how it works, you have to look into the diary!</string>

  <string name="app_name_file2">Stream to the file</string>

  <string name="this_is_the_log_file">"Conversation has been registered and displayed below. "</string>
  <string name="go_chat">Go to conversation</string>
  <string name="show_log_here">-Show log here</string>
  <string name="delete_log">Delete log</string>
  <string name="description">"You can talk with yourself and everything will be write to file"</string>
  <string name="chat_text_here_then_hit_send">Input text here and press SEND</string>
  <string name="send">Send</string>
  <string name="review_log_file">Review log file</string>
  <string name="title_activity_view_log">Log view</string>

  <string name="hello_world">Witaj, świecie!</string>

  <string name="app_name_content_providers">Content Providers</string>

  <string name="logcatOutput">Results is enable in LogCat.</string>

  <string name="load_picture">Load Picture</string>

  <string name="app_name_testing">Comparing passwords</string>
  <string name="match_passwords_title">Application Unit tests</string>
  <string name="password">Password</string>
  <string name="matching_password">Matching password</string>
  <string name="match_password_button">Check passwords</string>
  <string name="passwords_match_notice">Passwords are the same!</string>
  <string name="passwords_do_not_match_notice">Passwords are not the same!</string>
  <string name="display_title">Display Title</string>
  <string name="submit_match_password_button">SubmitMatchPasswordButton</string>
  <string name="match_password_notice">MatchPasswordNotice</string>

  <string name="app_name_fragment">Fragments</string>
  <string name="title_activity_veggie_garden">Andrew veggie garden</string>
</resources>
